--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "open_training_api",
   "version": "1.0.0",
   "description": "Give an API dedicated to training",
-  "main": "app.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "nps",
-    "test": "nps test"
+    "clean": "rimraf dist/*",
+    "tsc": "tsc",
+    "build": "npm-run-all clean tsc",
+    "dev:start": "npm-run-all build start",
+    "dev": "nodemon --watch src -e ts --exec npm run dev:start",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
@@ -33,6 +37,7 @@
     "express": "^4.17.1",
     "figlet": "^1.2.4",
     "helmet": "^3.21.2",
+    "jsonfile": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
@@ -40,10 +45,10 @@
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.0",
     "routing-controllers-openapi": "^1.8.0",
-    "ts-node": "^8.6.2",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.22",
-    "typeorm-typedi-extensions": "^0.2.3"
+    "typeorm-typedi-extensions": "^0.2.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -61,8 +66,8 @@
     "@types/reflect-metadata": "^0.1.0",
     "eslint": "^6.8.0",
     "nodemon": "^2.0.2",
-    "nps": "^5.9.12",
-    "nps-utils": "^1.7.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "typescript": "^3.7.5"
   }
 }
