change config migration

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,15 @@ NODE_ENV=development
 
 # Node.js server configuration
 APP_PORT=3000
+
+#Database see typeorm https://github.com/typeorm/typeorm/blob/master/docs/using-ormconfig.md#using-environment-variables
+TYPEORM_CONNECTION = mysql
+TYPEORM_HOST = xx.xx.xx.xx
+TYPEORM_USERNAME = user
+TYPEORM_PASSWORD = pwf
+TYPEORM_DATABASE = opentrainingapi
+TYPEORM_PORT = 3306
+TYPEORM_SYNCHRONIZE = true
+TYPEORM_LOGGING = true
+TYPEORM_ENTITIES_DIR = dist/api/models
+TYPEORM_ENTITIES = dist/api/models/**/*.js
