--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/SebUndefined/Open_Training_API#readme",
   "dependencies": {
+    "apollo-server-express": "^2.10.1",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
@@ -36,6 +37,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "figlet": "^1.2.4",
+    "graphql": "^14.6.0",
+    "graphql-iso-date": "^3.6.1",
     "helmet": "^3.21.2",
     "jsonfile": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -45,6 +48,7 @@
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.0",
     "routing-controllers-openapi": "^1.8.0",
+    "type-graphql": "^0.17.6",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.22",
     "typeorm-typedi-extensions": "^0.2.3",
@@ -58,6 +62,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/figlet": "^1.2.0",
+    "@types/graphql-iso-date": "^3.3.3",
     "@types/helmet": "0.0.45",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/morgan": "^1.7.37",
